NULL =

wxidir = $(datadir)/wixl-$(VERSION)/include

dist_wxi_DATA =					\
	wixl/SDL.wxi				\
	wixl/atk.wxi				\
	wixl/cairo.wxi				\
	wixl/celt051.wxi			\
	wixl/curl.wxi				\
	wixl/expat.wxi				\
	wixl/fontconfig.wxi			\
	wixl/freetype.wxi			\
	wixl/gcc.wxi				\
	wixl/gdk-pixbuf.wxi			\
	wixl/gettext.wxi			\
	wixl/glib2.wxi				\
	wixl/gmp.wxi				\
	wixl/gnutls.wxi				\
	wixl/gstreamer-plugins-bad-free.wxi	\
	wixl/gstreamer-plugins-base.wxi		\
	wixl/gstreamer-plugins-good.wxi		\
	wixl/gstreamer.wxi			\
	wixl/gtk-vnc.wxi			\
	wixl/gtk2.wxi				\
	wixl/gvnc.wxi				\
	wixl/hicolor-icon-theme.wxi		\
	wixl/jasper.wxi				\
	wixl/libcacard.wxi			\
	wixl/libffi.wxi				\
	wixl/libgcrypt.wxi			\
	wixl/libgpg-error.wxi			\
	wixl/libidn.wxi				\
	wixl/libjpeg-turbo.wxi			\
	wixl/libogg.wxi				\
	wixl/libpng.wxi				\
	wixl/libsoup.wxi			\
	wixl/libssh2.wxi			\
	wixl/libtasn1.wxi			\
	wixl/libtiff.wxi			\
	wixl/libusbx.wxi			\
	wixl/libvirt.wxi			\
	wixl/libvorbis.wxi			\
	wixl/libxml2.wxi			\
	wixl/nettle.wxi				\
	wixl/nspr.wxi				\
	wixl/nss.wxi				\
	wixl/openssl.wxi			\
	wixl/orc.wxi				\
	wixl/p11-kit.wxi			\
	wixl/pango.wxi				\
	wixl/pixman.wxi				\
	wixl/portablexdr.wxi			\
	wixl/pthreads.wxi			\
	wixl/readline.wxi			\
	wixl/spice-glib.wxi			\
	wixl/spice-gtk.wxi			\
	wixl/termcap.wxi			\
	wixl/usbredir.wxi			\
	wixl/win-iconv.wxi			\
	wixl/zlib.wxi				\
	$(NULL)

